boxddd-sys/third-party/box3d/include/box3d/types.h

/// Material properties supported per triangle on meshes and height fields
/// @ingroup shape
typedef struct b3SurfaceMaterial
{
	/// The Coulomb (dry) friction coefficient, usually in the range [0,1].
	float friction;

	/// The coefficient of restitution (bounce) usually in the range [0,1].
	/// https://en.wikipedia.org/wiki/Coefficient_of_restitution
	float restitution;

	/// The rolling resistance usually in the range [0,1]. This is only used for spheres and capsules.
	float rollingResistance;

	/// The tangent velocity for conveyor belts. This is local to the shape and will be projected
	/// onto the contact surface.
	b3Vec3 tangentVelocity;

	/// User material identifier. This is passed with query results and to friction and restitution
	/// combining functions. It is not used internally.
	uint64_t userMaterialId;

	/// Custom debug draw color. Ignored if 0. The low 24 bits are RGB. The high byte may
	/// carry a b3DebugMaterial preset, see b3MakeDebugColor.
	/// @see b3HexColor
	uint32_t customColor;

	/// Explicit padding. Must be zero.
	uint32_t padding;
} b3SurfaceMaterial;
/**
 * @defgroup sphere Sphere
 * @brief Sphere primitive
 * @{
 */

/// A solid sphere
typedef struct b3Sphere
{
	/// The local center
	b3Vec3 center;

	/// The radius
	float radius;
} b3Sphere;
/**@}*/ // sphere

/**
 * @defgroup capsule Capsule
 * @brief Capsule primitive
 * @{
 */

/// A solid capsule can be viewed as two hemispheres connected
/// by a rectangle.
typedef struct b3Capsule
{
	/// Local center of the first hemisphere
	b3Vec3 center1;

	/// Local center of the second hemisphere
	b3Vec3 center2;

	/// The radius of the hemispheres
	float radius;
} b3Capsule;
/// A convex hull.
/// @note This data structure has data hanging off the end and cannot be directly copied.
typedef struct b3HullData
{
	/// Version must be first and match B3_HULL_VERSION
	uint64_t version;

	/// Hash of this hull (this field is zero when the hash is computed).
	uint64_t hash;

	/// Axis-aligned box in local space.
	b3AABB aabb;

	/// Surface area, typically in squared meters.
	float surfaceArea;

	/// Volume, typically in m^3.
	float volume;

	/// The radius of the largest sphere at the center.
	float innerRadius;

	/// The local centroid
	b3Vec3 center;

	/// The inertia tensor about the centroid.
	b3Matrix3 centralInertia;

	/// The vertex count.
	int32_t vertexCount;

	/// Offset of the vertex array in bytes from the struct address.
	int32_t vertexOffset;

	/// Offset of the point array in bytes from the struct address.
	int32_t pointOffset;

	/// This is the half-edge count (double the edge count)
	int32_t edgeCount;

	/// Offset of the edge array in bytes from the struct address.
	int32_t edgeOffset;

	/// The face count. Hulls faces are convex polygons.
	int32_t faceCount;

	/// Offset of the face plane array in bytes from the struct address.
	int32_t planeOffset;

	/// Offset of the face array in bytes from the struct address.
	int32_t faceOffset;

	/// Offset of structure of array (SOA) vertices
	int32_t soaVertexOffset;

	/// Offset of structure of array (SOA) unit normal vectors
	int32_t soaNormalOffset;

	/// The total number of bytes for this hull.
	int32_t byteCount;

	/// Any padding must be explicit.
} b3HullData;
/// This is a sorted triangle collision bounding volume hierarchy.
/// @note This struct has data hanging off the end and cannot be directly copied.
typedef struct b3MeshData
{
	/// Version must be first.
	uint64_t version;

	/// Hash of this mesh (this field is zero when the hash is computed)
	uint64_t hash;

	/// The total number of bytes for this mesh.
	int32_t byteCount;

	/// Local axis-aligned box.
	b3AABB bounds;

	/// Combined surface area of all triangles. Single-sided.
	float surfaceArea;

	/// The height of the bounding volume hierarchy.
	int32_t treeHeight;

	/// The number of degenerate triangles. Diagnostic.
	int32_t degenerateCount;

	/// Offset of the node array in bytes from the struct address.
	int32_t nodeOffset;

	/// The number of BVH nodes.
	int32_t nodeCount;

	/// Offset of the vertex array in bytes from the struct address.
	int32_t vertexOffset;

	/// The number of vertices.
	int32_t vertexCount;

	/// Offset of the triangle array in bytes from the struct address.
	int32_t triangleOffset;

	/// The number of triangles.
	int32_t triangleCount;

	/// Offset of the material array in bytes from the struct address.
	int32_t materialOffset;

	/// The number of materials.
	int32_t materialCount;

	/// Offset of the triangle flag array in bytes from the struct address.
	int32_t flagsOffset;

	/// Explicit padding.
	int32_t padding;
} b3MeshData;
/// This allows mesh data to be re-used with different scales.
typedef struct b3Mesh
{
	/// Immutable pointer to the mesh data.
	const b3MeshData* data;

	/// This scale may be non-uniform and have negative components. However,
	/// no component may be very small in magnitude.
	b3Vec3 scale;
} b3Mesh;
/**@}*/ // mesh

/**
 * @defgroup height_field Height Field
 * @brief Height field collision shape
 * @{
 */

/// Data used to create a height field. No pointers are held to this data.
typedef struct b3HeightFieldDef
{
	/// Grid point heights
	/// count = countX * countZ
	float* heights;

	/// Grid cell material
	/// A value of 0xFF is reserved for holes
	/// count = (countX - 1) * (countZ - 1)
	uint8_t* materialIndices;

	/// The height field scale. All components must be positive values.
	b3Vec3 scale;

	/// The number of grid lines along the x-axis.
	int countX;

	/// The number of grid lines along the z-axis.
	int countZ;

	/// Global minimum and maximum heights used for quantization. This is important
	/// if you want height fields to be placed next to each other and line up exactly.
	/// In that case, both height fields should use the same minimum and maximum heights.
	/// All height values are clamped to this range.
	/// These values are in unscaled space.
	float globalMinimumHeight;

	/// The maximum.
	float globalMaximumHeight;

	/// Use clock-wise winding. This effectively inverts the height-field along the y-axis.
	bool clockwiseWinding;
} b3HeightFieldDef;
/// 64-bit height-field version. Useful for validating serialized data.
#define B3_HEIGHT_FIELD_VERSION 0x8E41E5FB084848F8ull
/// A height field with compressed storage.
/// @note This data structure has data hanging off the end and cannot be directly copied.
typedef struct b3HeightFieldData
{
	/// Version must be first and match B3_HEIGHT_FIELD_VERSION
	uint64_t version;

	/// Hash of this height field (this field is zero when the hash is computed).
	uint64_t hash;

	/// The total number of bytes for this height field.
	int byteCount;

	/// The local axis-aligned bounding box.
	b3AABB aabb;

	/// The minimum y value.
	float minHeight;

	/// The maximum y value
	float maxHeight;

	/// The quantization scale.
	float heightScale;

	/// The overall scale.
	b3Vec3 scale;

	/// The number of grid columns along the local x-axis.
	int32_t columnCount;

	/// The number of grid rows along the local z-axis.
	int32_t rowCount;

	/// Offset of the compressed height array in bytes from the struct address.
	/// uint16_t, one per grid point.
	int32_t heightsOffset;

	/// Offset of the material index array in bytes from the struct address.
	/// uint8_t, one per cell.
	int32_t materialOffset;

	/// Offset of the flag array in bytes from the struct address.
	/// uint8_t, one per triangle.
	int32_t flagsOffset;

	/// Triangle winding.
	uint8_t clockwise;

	/// Explicit padding.
	uint8_t padding[7];
} b3HeightFieldData;
/**@}*/ // height_field

/**
 * @defgroup compound Compound
 * @brief Compound collision shape
 * @{
 */

/// Definition for a capsule in a compound shape.
typedef struct b3CompoundCapsuleDef
{
	/// Local capsule.
	b3Capsule capsule;

	/// Material properties.
	b3SurfaceMaterial material;
} b3CompoundCapsuleDef;
/// Definition for a convex hull in a compound shape.
typedef struct b3CompoundHullDef
{
	/// Shared hull.
	const b3HullData* hull;

	/// Transform of the shared hull into compound local space.
	b3Transform transform;

	/// Material properties.
	b3SurfaceMaterial material;
} b3CompoundHullDef;
/// Definition for a triangle mesh in a compound shape.
typedef struct b3CompoundMeshDef
{
	/// Shared mesh.
	const b3MeshData* meshData;

	/// Transform of the shared mesh into compound local space.
	b3Transform transform;

	/// Local space non-uniform mesh scale. May have negative components.
	b3Vec3 scale;

	/// Material properties.
	/// This array must line up with the material indices on the triangles.
	const b3SurfaceMaterial* materials;

	/// Number of materials.
	int materialCount;
} b3CompoundMeshDef;
/// Definition for a sphere in a compound shape.
typedef struct b3CompoundSphereDef
{
	/// Local sphere.
	b3Sphere sphere;

	/// Material properties.
	b3SurfaceMaterial material;
} b3CompoundSphereDef;
/// Definition for creating a compound shape. All this data is fully cloned
/// into the run-time compound shape.
typedef struct b3CompoundDef
{
	/// Capsule instances.
	b3CompoundCapsuleDef* capsules;

	/// Number of capsules.
	int capsuleCount;

	/// Hulls instances.
	b3CompoundHullDef* hulls;

	/// Number of hull instances.
	int hullCount;

	/// Mesh instances.
	b3CompoundMeshDef* meshes;

	/// Number of mesh instances.
	int meshCount;

	/// Sphere instances.
	b3CompoundSphereDef* spheres;

	/// Number of spheres.
	int sphereCount;
} b3CompoundDef;