boxddd-sys/src/bindings_pregenerated.rs

impl b3MeshNode__bindgen_ty_1__bindgen_ty_2 {
    #[inline]
    pub fn type_(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 2u8) as u32) }
    }
    #[inline]
    pub fn set_type(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 2u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn type__raw(this: *const Self) -> u32 {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 0usize, 2u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_type_raw(this: *mut Self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                0usize,
                2u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn triangleCount(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 30u8) as u32) }
    }
    #[inline]
    pub fn set_triangleCount(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 30u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn triangleCount_raw(this: *const Self) -> u32 {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 2usize, 30u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_triangleCount_raw(this: *mut Self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                2usize,
                30u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        type_: u32,
        triangleCount: u32,
    ) -> __BindgenBitfieldUnit<[u8; 4usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 4usize]> = Default::default();
        __bindgen_bitfield_unit
            .set(
                0usize,
                2u8,
                {
                    let type_: u32 = unsafe { ::std::mem::transmute(type_) };
                    type_ as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                2usize,
                30u8,
                {
                    let triangleCount: u32 = unsafe {
                        ::std::mem::transmute(triangleCount)
                    };
                    triangleCount as u64
                },
            );
        __bindgen_bitfield_unit
    }
}
/** This is a sorted triangle collision bounding volume hierarchy.
 @note This struct has data hanging off the end and cannot be directly copied.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3MeshData {
    /// Version must be first.
    pub version: u64,
    /// The total number of bytes for this mesh.
    pub byteCount: ::std::os::raw::c_int,
    /// Hash of this mesh (this field is zero when the hash is computed)
    pub hash: u32,
    /// Local axis-aligned box.
    pub bounds: b3AABB,
    /// Combined surface area of all triangles. Single-sided.
    pub surfaceArea: f32,
    /// The height of the bounding volume hierarchy.
    pub treeHeight: ::std::os::raw::c_int,
    /// The number of degenerate triangles. Diagnostic.
    pub degenerateCount: ::std::os::raw::c_int,
    /// Offset of the node array in bytes from the struct address.
    pub nodeOffset: ::std::os::raw::c_int,
    /// The number of BVH nodes.
    pub nodeCount: ::std::os::raw::c_int,
    /// Offset of the vertex array in bytes from the struct address.
    pub vertexOffset: ::std::os::raw::c_int,
    /// The number of vertices.
    pub vertexCount: ::std::os::raw::c_int,
    /// Offset of the triangle array in bytes from the struct address.
    pub triangleOffset: ::std::os::raw::c_int,
    /// The number of triangles.
    pub triangleCount: ::std::os::raw::c_int,
    /// Offset of the material array in bytes from the struct address.
    pub materialOffset: ::std::os::raw::c_int,
    /// The number of materials.
    pub materialCount: ::std::os::raw::c_int,
    /// Offset of the triangle flag array in bytes from the struct address.
    pub flagsOffset: ::std::os::raw::c_int,
}
/// This allows mesh data to be re-used with different scales.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Mesh {
    /// Immutable pointer to the mesh data.
    pub data: *const b3MeshData,
    /** This scale may be non-uniform and have negative components. However,
 no component may be very small in magnitude.*/
    pub scale: b3Vec3,
}
/// Data used to create a height field
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3HeightFieldDef {
    /** Grid point heights
 count = countX * countZ*/
    pub heights: *mut f32,
    /** Grid cell material
 A value of 0xFF is reserved for holes
 count = (countX - 1) * (countZ - 1)*/
    pub materialIndices: *mut u8,
    /// The height field scale. All components must be positive values.
    pub scale: b3Vec3,
    /// The number of grid lines along the x-axis.
    pub countX: ::std::os::raw::c_int,
    /// The number of grid lines along the z-axis.
    pub countZ: ::std::os::raw::c_int,
    /** Global minimum and maximum heights used for quantization. This is important
 if you want height fields to be placed next to each other and line up exactly.
 In that case, both height fields should use the same minimum and maximum heights.
 All height values are clamped to this range.
 These values are in unscaled space.*/
    pub globalMinimumHeight: f32,
    /// The maximum.
    pub globalMaximumHeight: f32,
    /// Use clock-wise winding. This effectively inverts the height-field along the y-axis.
    pub clockwiseWinding: bool,
}
/** A height field with compressed storage.
 @note This data structure has data hanging off the end and cannot be directly copied.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3HeightFieldData {
    /// Version must be first and match B3_HEIGHT_FIELD_VERSION
    pub version: u64,
    /// The total number of bytes for this height field.
    pub byteCount: ::std::os::raw::c_int,
    /// Hash of this height field (this field is zero when the hash is computed).
    pub hash: u32,
    /// The local axis-aligned bounding box.
    pub aabb: b3AABB,
    /// The minimum y value.
    pub minHeight: f32,
    /// The maximum y value
    pub maxHeight: f32,
    /// The quantization scale.
    pub heightScale: f32,
    /// The overall scale.
    pub scale: b3Vec3,
    /// The number of grid columns along the local x-axis.
    pub columnCount: ::std::os::raw::c_int,
    /// The number of grid rows along the local z-axis.
    pub rowCount: ::std::os::raw::c_int,
    /** Offset of the compressed height array in bytes from the struct address.
 uint16_t, one per grid point.*/
    pub heightsOffset: ::std::os::raw::c_int,
    /** Offset of the material index array in bytes from the struct address.
 uint8_t, one per cell.*/
    pub materialOffset: ::std::os::raw::c_int,
    /** Offset of the flag array in bytes from the struct address.
 uint8_t, one per triangle.*/
    pub flagsOffset: ::std::os::raw::c_int,
    /// Triangle winding.
    pub clockwise: bool,
    /** Explicit padding. Identity is a content hash over raw bytes, so there must
 be no unnamed padding for struct copies to scramble.*/
    pub padding: [u8; 3usize],
}
/// Definition for a capsule in a compound shape.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3CompoundCapsuleDef {
    /// Local capsule.
    pub capsule: b3Capsule,
    /// Material properties.
    pub material: b3SurfaceMaterial,
}
/// Definition for a convex hull in a compound shape.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3CompoundHullDef {
    /// Shared hull.
    pub hull: *const b3HullData,
    /// Transform of the shared hull into compound local space.
    pub transform: b3Transform,
    /// Material properties.
    pub material: b3SurfaceMaterial,
}
/// Definition for a triangle mesh in a compound shape.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3CompoundMeshDef {
    /// Shared mesh.
    pub meshData: *const b3MeshData,
    /// Transform of the shared mesh into compound local space.
    pub transform: b3Transform,
    /// Local space non-uniform mesh scale. May have negative components.
    pub scale: b3Vec3,
    /** Material properties.
 This array must line up with the material indices on the triangles.*/
    pub materials: *const b3SurfaceMaterial,
    /// Number of materials.
    pub materialCount: ::std::os::raw::c_int,
}
/// Definition for a sphere in a compound shape.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3CompoundSphereDef {
    /// Local sphere.
    pub sphere: b3Sphere,
    /// Material properties.
    pub material: b3SurfaceMaterial,
}
/** Definition for creating a compound shape. All this data is fully cloned
 into the run-time compound shape.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3CompoundDef {
    /// Capsule instances.
    pub capsules: *mut b3CompoundCapsuleDef,
    /// Number of capsules.
    pub capsuleCount: ::std::os::raw::c_int,
    /// Hulls instances.
    pub hulls: *mut b3CompoundHullDef,
    /// Number of hull instances.
    pub hullCount: ::std::os::raw::c_int,
    /// Mesh instances.
    pub meshes: *mut b3CompoundMeshDef,
    /// Number of mesh instances.
    pub meshCount: ::std::os::raw::c_int,
    /// Sphere instances.
    pub spheres: *mut b3CompoundSphereDef,
    /// Number of spheres.
    pub sphereCount: ::std::os::raw::c_int,
}
